# mtg-proxies

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  convert.py  deck_value.py  print.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_token.py  tokens.py
.github/workflows/: python-package.yml
SAMPLES/: sampleCards_brokenCards.txt  sampleCards_okCards.txt
examples/: decklist.txt  decklist_text.txt  double_faced_cards.txt  layouts.txt  wrong_names.txt
html_card_sample/: creature.html  generate_proxy.py  land.html  legendaryCreature.html  legendaryCreature_withManaText.html  planeswalker.html  split.html
html_card_sample/css/: main.css  mana.css
minimalistproxies/: proxies.py
minimalistproxies/html/: html_template.html
minimalistproxies/html/css/: main.css
mtg_proxies/: __init__.py  cli.py  deck_value.py  format.py  print_cards.py  scans.py  tokens.py
mtg_proxies/decklists/: __init__.py  cleaning.py  decklist.py  sanitizing.py
mtg_proxies/decklists/archidekt/: __init__.py  archidekt.py
mtg_proxies/decklists/manastack/: __init__.py  manastack.py
mtg_proxies/plotting/: __init__.py  splitpages.py
mtg_proxies/scryfall/: __init__.py  rate_limit.py  scryfall.py
mtgproxies/: __init__.py  cli.py  dimensions.py  format.py  print_cards.py  scans.py
mtgproxies/decklists/: __init__.py  arena.py  cleaning.py  decklist.py  sanitizing.py  text.py
mtgproxies/decklists/archidekt/: __init__.py  archidekt.py
mtgproxies/decklists/manastack/: __init__.py  manastack.py
mtgproxies/plotting/: __init__.py  splitpages.py
mtgproxies/scryfall/: __init__.py  rate_limit.py  scryfall.py
scryfall/: __init__.py  rate_limit.py  scryfall.py
tests/: cli_test.py  conftest.py  decklist_test.py  print_test.py  scans_test.py  scryfall_test.py  test_stale_image_cache.py
tests/data/: decklist_text.txt  layouts.txt  token_generators.txt
tests/resources/decklists/: decklist.txt  wrong_names.txt
