[project]
name = "mtg-proxies"
version = "0.2.1"
authors = [{ name = "Robin More", email = "more@diddiz.de" }]
description = "Print high-resolution MtG proxies."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "requests",
    "tqdm",
    "fpdf2>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
mtg-proxies = "mtg_proxies.cli:main"

[build-system]
requires = ["uv_build >= 0.10.0, <0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mtg_proxies"
module-root = ""

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true
fix = true

[tool.ruff.lint]
select = [
    "E4",     # default
    "E7",     # default
    "E9",     # default
    "F",      # default
    "E501",   # line-length
    "I",      # isort
    "UP",     # pyupgrade
    "W605",   # pyupgrade
    "ANN",    # flake8-annotations
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "COM818", # Trailing comma on bare tuple prohibited
    "D",      # pydocstyle
    "D401",   # First line of docstring should be in imperative mood
    "D404",   # First word of the docstring should not be "This"
    "DTZ",    # flake8-datetimez 
    "FA",     # flake8-future-annotations
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "ISC",    # flake8-implicit-str-concat
    "N",      # pep8-naming
    "NPY",    # NumPy-specific rules
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "PD",     # pandas-vet
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TD",     # flake8-todos
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
]
ignore = [
    "A00",
    "B019",    # Use of functools.lru_cache or functools.cache on methods can lead to memory leaks
    "B905",    # zip-without-explicit-strict
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "G004",    # Logging statement uses f-string TODO: Include this at some point
    "ISC003",  # Explicitly concatenated string should be implicitly concatenated
    "N806",    # Variable {name} in function should be lowercase
    "PD008",   # Use .loc instead of .at
    "PD009",   # Use .iloc instead of .iat
    "PLR09",   # Too many...
    "PLR2004", # Magic value used in comparison
    "PT003",   # scope='function' is implied in @pytest.fixture()
    "PTH123",  # open() should be replaced by Path.open()
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link for this TODO
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY004",  # Prefer TypeError exception for invalid type
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"**.ipynb" = ["D", "T20"]
"tests/*" = ["D103"]
"!tests/*" = ["TID253"]
"cli.py" = ["T20"]
"convert.py" = ["T20"]
"deck_value.py" = ["T20"]
"tokens.py" = ["T20"]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = ["mtg_proxies"]

[tool.ruff.lint.isort]
known-first-party = []
known-local-folder = ["mtg_proxies"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.flake8]
select = ["I900"]
known-modules = "fpdf2:[fpdf]"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
